# lucidfence

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  ADAPTER.md  AGENTS.md  CHANGELOG.md  CLIENTE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  INFORME_CEO_REVIEW.md  KANBAN.md  LOOP.md  README.en.md  README.md  README_CLIENTE.md  README_SAAS.md  ROADMAP_2026-2027.md  ROADMAP_Q3_2026.md  ROADMAP_TOOLING.md  RUNBOOK.md  SECURITY.md  SPEC.md  STATE.md  _test_risk.py  artifact.tar  build.sh  cli.py  cloud_publisher.py  config_loader.py  deploy_fly.sh  diag.mjs  docker-compose.yml  docker_start.sh  fences.json  fly.toml  geofence_daily_report.sh  install.sh  (+18 more)
.agents/: product-marketing.md
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
Formula/: lucidfence.rb
agents/: code-reviewer.md  security-auditor.md  test-engineer.md
analysis/: fleet_intelligence.ipynb  requirements.txt
assets/: social-preview.html
core/: actions.py  adapter_marketplace.py  ai.py  ai_provider.py  alerts.py  api_keys.py  app_paths.py  atomicmail_client.py  autonomous_company.py  cluster.py  compliance_controls.py  cve.py  cve_feed_nvd.py  doctor.py  engine.py  export.py  fences.py  freedomain.py  geo.py  geocode.py  incidents.py  location_source.py  loop_governance.py  multiuem.py  notifier.py  oidc.py  policies.py  predictive.py  product.py  provider_plugins.py  routes.py  secrets.py  soar.py  state_store.py  storage.py  workflows.py
data/: _sessions.json  _users.json  actions_log.jsonl  cloud_state.json  cve_feed_nvd.json  (+10 more)
(+300 files in other folders)
