[build-system]
requires = ["setuptools>=83"]
build-backend = "setuptools.build_meta"

[project]
name = "lucidfence-local"
version = "1.3.0"
description = "Local-first geofencing risk and UEM automation SDK"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "LucidFence contributors"}]
dependencies = ["requests>=2.31,<3"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/adrimg3196/lucidfence"
Documentation = "https://adrimg3196.github.io/lucidfence/"

[tool.setuptools.packages.find]
include = ["lucidfence*", "core*"]
exclude = ["tests*", "data*"]
